--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="drawer-widget.js"></script>
 </head>
 <body>
-<div style="height: 600px">
+<div style="height: 100vh">
   <itl-drawer></itl-drawer>
 </div>
 </body>
