--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="drawer-widget.js"></script>
 </head>
 <body>
-<div style="height: 100vh">
+<div style="min-height: 100vh">
   <itl-drawer></itl-drawer>
 </div>
 </body>
