--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="drawer-widget.js"></script>
 </head>
 <body>
-<div style="min-height: 100vh">
+<div style="min-height: 100vh;background-image: radial-gradient(black 1px, transparent 0); background-size: 40px 40px;">
   <itl-drawer></itl-drawer>
 </div>
 </body>
