--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="drawer-widget.js"></script>
 </head>
 <body>
-<div style="min-height: 100vh;background-image: radial-gradient(gray 1px, transparent 0); background-size: 20px 20px;">
+<div style="min-height: 100vh;background-image: radial-gradient(#ddd 1px, transparent 0); background-size: 20px 20px;">
   <itl-drawer></itl-drawer>
 </div>
 </body>
